export interface Descuento {
    calcular(total: number): number;
}