export interface MedioDePago {
    pagoDeCuenta(): number;
}