export enum Categoria {
    ENTRADA,
    PLATOPRINCIPAL,
    BEBIDA,
    POSTRE
}