export enum EstadoPedido {
    EN_CONSTRUCCION,
    CONFIRMADO,
    FACTURADO,
    FINALIZADO
}