export interface TipoDePedido {
    calcularCostoAdicional(): number;
}