@startuml Trabajo Practico Programacion 2 Grupo 02 

title Gestion de pedidos en un restaurante 

class Restaurante {
    - historialPedidos:Pedido[]
    - menu: Menu[]
    - estaciones EstacionDeTrabajo[]

    + registrarPedido():void
    + agregarItem(p:Pedido, i:ItemPedido):void
    + quitarItem(p:Pedido):void
    + confirmarPedido(p:Pedido):void
    + facturarPedido():number
    + agregarItemMenu(item: Menu):void
    + eliminarItemMenu(item: Menu):void
    + consultarRecaudacion():void
}
'--------------------------------------------------------
class Pedido {
    - items: ItemPedido[]
    - estado: EstadoPedido
    - modalidad: TipoDePedido
    
    + agregarItem(item: ItemPedido): void
    + quitarUltimoItem(): void
    + deshacerUltimaModificacion(): void
    + confirmar(): void
    + puedeFacturar(): boolean
    + calcularPrecioTotal(): number
}

enum EstadoPedido{
    EN_CONSTRUCCION
    CONFIRMADO
    FACTURADO
    FINALIZADO
}

interface TipoDePedido {
    + calcularCostoAdicional():number
}

class PedidoEnSalon {
    - mesa:string
    + calcularCostoAdicional():number

}

class PedidoParaRetirar {
    - horario:number
    + calcularCostoAdicional():number

}

class PedidoDelivery {
    - direccion:string
    - costoEnvio:number
    + calcularCostoAdicional():number

}

class ItemPedido {
    - item: Menu
    - cantidad: number
    - estado: EstadoItem

    + comenzarPreparacion(): void
    + marcarListo(): void
    + modificar(): void
    + cancelar(): void
    + getPrecio(): number
}

enum EstadoItem {
    PENDIENTE,
    EN_PREPARACION
    LISTO
}
'----------------------------------------------------------
abstract class Menu {
    - nombre: string
    - precio: number

    {abstract} getPrecio(): number
    + getNombre(): string
}

class Producto {
    - categoria: Categoria
    - tipoEstacion: TipoEstacionTrabajo

    + getPrecio()
}

class Combo {
    - productos[]:Menu
    - TipoDeDescuento

    + getPrecio()
}

enum Categoria {
    ENTRADA,
    PLATO_PRINCIPAL.
    BEBIDA,
    POSTRE
}

interface TipoDeDescuento {
    + calcular(productos: Menu[]): number;
}
class descuentoPorcentual implements TipoDeDescuento{}
class PrecioFijo implements TipoDeDescuento{}
'----------------------------------------------------------
class EstacionDeTrabajo{
    - colaDePedidos: Queue<ItemPedido>;
    - enum TipoEstacionTrabajo

    + recibirItem(item: ItemPedido): void
    + prepararSiguiente(item: ItemPedido): void
}
enum TipoEstacionTrabajo{
    PARRILLA,
    COCINAFRIA,
    BARRA,
    COCINADULCE
}
'----------------------------------------------------------
class Factura {
    - totalPedido: number
    - descuentos: Descuento[] // puede acumular dto en efectivo + dto especial
    - totalCobrado: number

    + calcularTotal(): number
}

interface MedioDePago {
    + pagoDeCuenta():number
}
class Efectivo{}
class TarjetaDebito{}
class TarjetaCredito{}
class BilleteraVirtual{}

interface Descuento {
    + calcular(total: number): number
}
class DescuentoEfectivo
class DescuentoDiaEspecial
'Relaciones'

PedidoEnSalon -u-|> Pedido
PedidoDelivery -u-|> Pedido
PedidoParaRetirar -u-|> Pedido

Combo -u-|> Menu
Producto -u-|> Menu

Efectivo -u-|> MedioDePago
TarjetaCredito -u-|> MedioDePago
TarjetaDebito -u-|> MedioDePago
BilleteraVirtual -u-|> MedioDePago

Restaurante o-- Menu
Restaurante o-- EstacionDeTrabajo
Restaurante o-- Pedido
Restaurante o-- MedioDePago
@enduml
